<resources>
    <string name="app_name">LocationEuropcar</string>
    <string name="hello_blank_fragment">Bonjour fragment blanc</string>
    <string name="europcar">EuropCar</string>
    <string name="raison_sociale">Raison sociale</string>
    <string name="siret">SIRET</string>
    <string name="voie">Voie</string>
    <string name="code_postal">Code postal</string>
    <string name="ville">Ville</string>
    <string name="modifier">Modifier</string>
    <string name="title_activity_liste">ListeActivity</string>
    <string name="lbl_identifiant">identifiant :</string>
    <string name="lbl_mot_de_passe">Mot de passe :</string>
    <string name="lbl_confirmer_mot_de_passe">Confirmer mot de passe :</string>
    <string name="lbl_se_connecter">Se connecter</string>
    <string name="lbl_sinscrire">S\'inscrire</string>
    <string name="lbl_inscription">Inscription</string>
    <string name="vehicule_id">VehiculeID</string>
    <string name="libelle">Libelle</string>
    <string name="nbplaces">NbPlaces</string>
    <string name="locminmax">LocMinMax</string>
    <string name="tarifminmax">TarifMinMax</string>
    <string name="date_debut">Date début</string>
    <string name="date_fin">Date fin</string>
    <string name="tarif_journalier">Tarif journalier</string>
    <string name="reserver">Réserver</string>
    <string name="erreur_identifiant">Veuillez renseigner votre identifiant !</string>
    <string name="erreur_mdp">Veuillez renseigner votre mot de passe !</string>
    <string name="erreur_confirm_mdp">Veuillez saisir votre mot de passe une seconde fois !</string>
    <string name="erreur_mdp_different">Le mot de passe saisie est différent !</string>
    <string name="erreur_agence_raison_sociale">Veuillez entrer une raison sociale.</string>
    <string name="erreur_agence_siret">Veuillez entrer un SIRET</string>
    <string name="erreur_agence_voie">Veuillez entrer une voie.</string>
    <string name="erreur_agence_code_postal">Veuillez entrer un code postal.</string>
    <string name="erreur_agence_ville">Veuillez entrer une ville.</string>
    <string name="lbl_token">lbl_token</string>
    <string name="erreur_reserver_date_debut">Veuillez entrer une date de début.</string>
    <string name="erreur_reserver_date_fin">Veuillez entrer une date de fin.</string>
    <string name="erreur_reserver_tarif_journalier">Veuillez entrer une date de début.</string>
    <string name="toast_reservation_ok">Votre réservation est enregistrée.</string>
    <string name="erreur_parse_date">Date incorrect, le format attendue est : jj/mm/aaaa.</string>
    <string name="erreur_montant_tarif">Le tarif journalier doit être compris entre les valeurs données.</string>
    <string name="erreur_montant_incorrect">Le montant saisie est incorrect.</string>
    <string name="est_endommage">Est endommagé</string>
    <string name="rendre_plein">Le plein est fait</string>
    <string name="rendre_nb_km">Nombre de kilomètres</string>
    <string name="rendre_ajout_photo">Ajouter une photo</string>
    <string name="btn_rendre">Rendre</string>
</resources>
